--- a/.env.sample
+++ b/.env.sample
@@ -3,3 +3,4 @@ MONGO_URI=XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
 EMAIL_USER=your_email@gmail.com
 EMAIL_PASS=your_email_password_or_app_specific_password
 JWT_SECRET=your_jwt_secret_key
+FRONTEND_URL=http://localhost:3000
