--- a/.env
+++ b/.env
@@ -8,4 +8,4 @@ SMTP_MAIL=vktgkp7@gmail.com
 SMTP_PASSWORD=yjmx pspr wjbw vnoc
 SMTP_HOST=smtp.gmail.com
 SMTP_PORT=465
-FRONTEND_URL=http://localhost:3000
+FRONTEND_URL=https://connect-india-japan.vercel.app
